# Cpp-ircus

./: .gitignore  CMakeLists.txt  README.md  main.cpp
include/: BinarySum.h  LengthLastWord.h  Palindrome_int.h  RemoveElement.h
src/: BinarySum.cpp  LengthLastWord.cpp  Palindrome_int.cpp  RemoveElement.cpp
test/: CMakeLists.txt  CustomTest.h  TestBinarySum.cpp  TestLengthLastWord.cpp  TestPalindrome_int.cpp  TestRemoveElement.cpp
test/test_blueprint/: CMakeLists.txt  README.md
test/test_blueprint/include/: Example.h
test/test_blueprint/src/: Example.cpp
test/test_blueprint/test/: CMakeLists.txt  ExampleTests.cpp
